test/typecheck/errors/bad-views19.boa
o: output sum of int;

v1: table[year: int][projectID: string][fileName: string] of temp:int;

r1: v1._row;

while (2 >> 1 >> r1) {
	o << 1;
}
